--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,4 @@
 {
-  "version": 2,
-  "public": true,
-  "routes": [
-    {
-      "src": "/admin.html",
-      "headers": {
-        "X-Robots-Tag": "noindex, nofollow",
-        "X-Frame-Options": "DENY",
-        "X-Content-Type-Options": "nosniff"
-      }
-    },
-    {
-      "src": "/assets/js/config.js",
-      "headers": {
-        "Cache-Control": "no-cache, no-store, must-revalidate"
-      }
-    }
-  ],
   "headers": [
     {
       "source": "/(.*)",
@@ -32,6 +14,28 @@
         {
           "key": "Referrer-Policy",
           "value": "strict-origin-when-cross-origin"
+        }
+      ]
+    },
+    {
+      "source": "/admin.html",
+      "headers": [
+        {
+          "key": "X-Robots-Tag",
+          "value": "noindex, nofollow"
+        },
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        }
+      ]
+    },
+    {
+      "source": "/assets/js/config.js",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-cache, no-store, must-revalidate"
         }
       ]
     }
