docs: rewrite ROLE_PERMISSIONS, DEPLOYMENT, add README; fix sw.js cache list; secure .gitignore
- Rewrote ROLE_PERMISSIONS.md to match actual RLS policies and admin roles
- Rewrote DEPLOYMENT.md with real architecture and service details
- Added README.md with project overview, tech stack, and setup guide
- Updated sw.js: added all missing pages/scripts to STATIC_ASSETS, bumped cache to v2
- Updated .gitignore to exclude docs containing API secrets
- Includes all prior changes: edge function, order email trigger, checkout order saving,
  auth improvements, analytics, SEO/OG tags, image optimization, and more

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,9 @@
 SUPABASE_URL=your_supabase_url_here
 SUPABASE_ANON_KEY=your_supabase_anon_key_here
 
-# Paystack (for payments)
-PAYSTACK_PUBLIC_KEY=pk_test_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# Monnify (for payments)
+MONNIFY_API_KEY=MK_TEST_XXXXXXXXXX
+MONNIFY_CONTRACT_CODE=XXXXXXXXXX
 
 # WhatsApp Business Number (international format, no +)
 WHATSAPP_NUMBER=2349033344860
