fix: reduce HSTS to 1 day, remove preload — let cached 308 browsers recover

--- a/vercel.json
+++ b/vercel.json
@@ -37,7 +37,7 @@
         },
         {
           "key": "Strict-Transport-Security",
-          "value": "max-age=63072000; includeSubDomains; preload"
+          "value": "max-age=86400; includeSubDomains"
         },
         {
           "key": "X-DNS-Prefetch-Control",
@@ -54,7 +54,7 @@
         },
         {
           "key": "Strict-Transport-Security",
-          "value": "max-age=63072000; includeSubDomains; preload"
+          "value": "max-age=86400; includeSubDomains"
         }
       ]
     },
