Admin UI polish, customer data flow fix, .gitignore cleanup
- Admin CSS: inbox compose select, send btn WhatsApp style, search hover effects, analytics bar chart redesign with rounded bars/tooltips
- Admin JS: loadCustomers() fixed to query correct columns, WhatsApp column added, search/export updated
- Admin HTML: customer table 8 columns with WhatsApp
- Dashboard JS: saveProfile() syncs full_name/phone to profiles table
- Cart/Checkout: fixed falsy-zero shipping cost bug (Lagos ₦0)
- Styles: overflow hidden on scroll-reveal containers
- Config: minor updates
- .gitignore: untrack supabase/, email-worker/, supabase_complete.sql, sensitive docs

--- a/.gitignore
+++ b/.gitignore
@@ -36,12 +36,14 @@ build/
 SERVICES_SETUP.md
 EDGE_FUNCTION_DEPLOY.md
 EMAIL_NOTIFICATIONS_SETUP.md
+EMAIL_REPLY_WEBHOOK_SETUP.md
 GOOGLE_LOGIN_SETUP.md
 DEPLOYMENT.md
 ROLE_PERMISSIONS.md
 
 # Database schema / SQL dumps
 *.sql
+supabase_complete.sql
 
 # Environment examples
 .env.example
@@ -50,6 +52,9 @@ ROLE_PERMISSIONS.md
 supabase/
 nul
 
+# Cloudflare email worker (contains internal routing config)
+email-worker/
+
 # Local dev server config
 serve.json
 serve_output.txt
@@ -57,3 +62,7 @@ serve_output.txt
 # Build / migration helpers
 _*.css
 _*.js
+
+# Temp files
+clear_test_data.sh
+DocuMorph/
